Display Brightness Low & Controls Inverted In linux "AMD Ryzen 5 5600H with Radeon Graphics"
I have a problem on Linux with my "AMD Ryzen 5 5600H with Radeon Graphics" which is brightness is so low & brightness controls inverted. An important detail is the backlight is at max brightness during the grub screen and halfway into the boot process, just around the time when the systemd backlight service is invoked the screen dims all the way down and stays that way.
In my laptop, the LCD panel is connected to the AMD GPU.
INXI Output:INXI.txt
acpidump Output:acpidump.bin
Edited by Ali Ibrahim